初始化 EF Core 設定與連接字串

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+      "DefaultConnection": "data source=(localdb)\\MSSQLLocalDB;initial catalog=ContosoUniversity;integrated security=True;encrypt=True;trust server certificate=True;command timeout=300"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
